I fixed my API Docs
