# swagger.json
@@ -5,8 +5,8 @@
     "description": "API of the second project",
     "version": "1.0.0"
   },
-  "host": "project2-cse341-sga3.onrender.com/database",
-  "basePath": "/",
+  "host": "project2-cse341-sga3.onrender.com",
+  "basePath": "/database",
   "schemes": [
     "https"
   ],
@@ -14,7 +14,7 @@
     "/{Collection}": {
       "get": {
         "tags": [
-          "Cars"
+          "All Items"
         ],
         "description": "",
         "produces": [
@@ -39,7 +39,7 @@
       },
       "post": {
         "tags": [
-          "Create Car"
+          "Create an Item"
         ],
         "description": "",
         "produces": [
@@ -66,7 +66,7 @@
     "/{Collection}/{id}": {
       "get": {
         "tags": [
-          "Get Car by ID"
+          "Get an Item by ID"
         ],
         "description": "",
         "produces": [
@@ -100,7 +100,7 @@
       },
       "put": {
         "tags": [
-          "Update Car by ID"
+          "Update an Item by ID"
         ],
         "description": "",
         "produces": [
@@ -134,7 +134,7 @@
       },
       "delete": {
         "tags": [
-          "Delete Car by ID"
+          "Delete an Item by ID"
         ],
         "description": "",
         "produces": [
